--- a/package.json
+++ b/package.json
@@ -1,171 +1,140 @@
 {
-  "type": "module",
-  "name": "htwr-aachen",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "export": "next export",
-    "build-prod": "run-s clean build export",
-    "clean": "rimraf .next out",
-    "lint": "next lint",
-    "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
-    "test": "jest",
-    "commit": "cz",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "prepare": "husky install",
-    "postbuild": "next-sitemap --config next-sitemap.config.cjs"
-  },
-  "dependencies": {
-    "@fontsource-variable/hanken-grotesk": "^5.1.0",
-    "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/mdx": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/bundle-analyzer": "^14.2.15",
-    "@next/env": "^13.5.7",
-    "@next/mdx": "^13.5.7",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@remark-embedder/core": "^3.0.3",
-    "@remark-embedder/transformer-oembed": "^3.0.0",
-    "@shikijs/rehype": "^1.22.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/mapbox__rehype-prism": "^0.8.3",
-    "@types/mdx": "^2.0.13",
-    "@uiw/react-prismjs": "^1.3.6",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^2.30.0",
-    "feed": "^4.2.2",
-    "fs": "0.0.1-security",
-    "gray-matter": "^4.0.3",
-    "husky": "^8.0.3",
-    "inquirer": "^9.3.7",
-    "js-cookie": "^3.0.5",
-    "katex": "^0.16.11",
-    "lucide-react": "^0.358.0",
-    "mermaid": "^10.9.2",
-    "mini-css-extract-plugin": "^2.9.1",
-    "motion": "^12.4.4",
-    "natsort": "^2.0.3",
-    "next": "^14.2.15",
-    "next-mdx-remote": "^4.4.1",
-    "next-seo": "^5.15.0",
-    "next-sitemap": "^3.1.55",
-    "next-themes": "^0.3.0",
-    "parse5": "^7.2.0",
-    "prismjs": "^1.29.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-katex": "^3.0.1",
-    "react-responsive-carousel": "^3.2.23",
-    "react-youtube": "^10.1.0",
-    "rehype-img-size": "^1.0.1",
-    "rehype-katex": "^6.0.3",
-    "rehype-prism-plus": "^1.6.3",
-    "rehype-react": "^7.2.0",
-    "rehype-stringify": "^9.0.4",
-    "remark-gfm": "^3.0.1",
-    "remark-heading-id": "^1.0.1",
-    "remark-hint": "^1.0.10",
-    "remark-math": "^5.1.1",
-    "remark-parse": "^10.0.2",
-    "remark-react": "^9.0.1",
-    "remark-rehype": "^10.1.0",
-    "sharp": "^0.31.3",
-    "shiki": "^1.22.0",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.2",
-    "uuid": "^9.0.1",
-    "vaul": "^0.9.9",
-    "webpack": "^5.95.0"
-  },
-  "devDependencies": {
-    "@percy/cli": "^1.30.1",
-    "@percy/cypress": "^3.1.2",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.5.13",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^18.19.56",
-    "@types/prismjs": "^1.26.4",
-    "@types/react": "^18.3.11",
-    "@types/react-katex": "^3.0.4",
-    "@types/remark-hint": "^1.0.6",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.20",
-    "commitizen": "^4.3.1",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.1.15",
-    "cypress": "^12.17.4",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^14.2.15",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-cypress": "^2.15.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-simple-import-sort": "^9.0.0",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "eslint-plugin-testing-library": "^5.11.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^13.3.0",
-    "memfs": "^4.14.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
-    "prettier": "^2.8.8",
-    "rimraf": "^4.4.1",
-    "sass": "^1.80.1",
-    "semantic-release": "^19.0.5",
-    "start-server-and-test": "^1.15.4",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  },
-  "release": {
-    "branches": [
-      "master"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ],
-      "@semantic-release/git",
-      "@semantic-release/github"
-    ]
-  },
-  "author": "Jonas Schneider (https://github.com/jonsch318)",
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+	"type": "module",
+	"name": "htwr-aachen",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"build-stats": "cross-env ANALYZE=true npm run build",
+		"export": "next export",
+		"build-prod": "run-s clean build export",
+		"clean": "rimraf .next out",
+		"lint": "next lint",
+		"format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+		"check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+		"test": "jest",
+		"commit": "cz",
+		"cypress": "cypress open",
+		"cypress:headless": "cypress run",
+		"e2e": "start-server-and-test dev http://localhost:3000 cypress",
+		"e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+		"prepare": "husky install",
+		"postbuild": "next-sitemap --config next-sitemap.config.cjs"
+	},
+	"dependencies": {
+		"@fontsource-variable/hanken-grotesk": "^5.1.0",
+		"@mapbox/rehype-prism": "^0.8.0",
+		"@mdx-js/loader": "^2.3.0",
+		"@mdx-js/mdx": "^2.3.0",
+		"@mdx-js/react": "^2.3.0",
+		"@next/bundle-analyzer": "^14.2.15",
+		"@next/env": "^13.5.7",
+		"@next/mdx": "^13.5.7",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@remark-embedder/core": "^3.0.3",
+		"@remark-embedder/transformer-oembed": "^3.0.0",
+		"@shikijs/rehype": "^1.22.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/mapbox__rehype-prism": "^0.8.3",
+		"@types/mdx": "^2.0.13",
+		"@uiw/react-prismjs": "^1.3.6",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
+		"date-fns": "^2.30.0",
+		"feed": "^4.2.2",
+		"fs": "0.0.1-security",
+		"gray-matter": "^4.0.3",
+		"husky": "^8.0.3",
+		"inquirer": "^9.3.7",
+		"js-cookie": "^3.0.5",
+		"katex": "^0.16.11",
+		"lucide-react": "^0.358.0",
+		"mermaid": "^10.9.2",
+		"motion": "^12.4.4",
+		"natsort": "^2.0.3",
+		"next": "^14.2.15",
+		"next-mdx-remote": "^4.4.1",
+		"next-seo": "^5.15.0",
+		"next-sitemap": "^3.1.55",
+		"next-themes": "^0.3.0",
+		"parse5": "^7.2.0",
+		"prismjs": "^1.29.0",
+		"prop-types": "^15.8.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-katex": "^3.0.1",
+		"react-responsive-carousel": "^3.2.23",
+		"rehype-img-size": "^1.0.1",
+		"rehype-katex": "^6.0.3",
+		"rehype-prism-plus": "^1.6.3",
+		"rehype-react": "^7.2.0",
+		"rehype-stringify": "^9.0.4",
+		"remark-gfm": "^3.0.1",
+		"remark-heading-id": "^1.0.1",
+		"remark-hint": "^1.0.10",
+		"remark-math": "^5.1.1",
+		"remark-parse": "^10.0.2",
+		"remark-react": "^9.0.1",
+		"remark-rehype": "^10.1.0",
+		"sharp": "^0.31.3",
+		"shiki": "^1.22.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"unified": "^10.1.2",
+		"unist-util-visit": "^4.1.2",
+		"uuid": "^9.0.1",
+		"vaul": "^0.9.9",
+		"webpack": "^5.95.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.21.0",
+		"@percy/cli": "^1.30.1",
+		"@percy/cypress": "^3.1.2",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/git": "^10.0.1",
+		"@testing-library/cypress": "^9.0.0",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.5.13",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^18.19.56",
+		"@types/prismjs": "^1.26.4",
+		"@types/react": "^18.3.11",
+		"@types/react-katex": "^3.0.4",
+		"@types/remark-hint": "^1.0.6",
+		"@types/uuid": "^9.0.8",
+		"autoprefixer": "^10.4.20",
+		"commitizen": "^4.3.1",
+		"cross-env": "^7.0.3",
+		"cssnano": "^5.1.15",
+		"cypress": "^12.17.4",
+		"eslint": "^9.21.0",
+		"eslint-config-next": "15.1.7",
+		"eslint-plugin-next": "^0.0.0",
+		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"globals": "^16.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"lint-staged": "^13.3.0",
+		"memfs": "^4.14.0",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.47",
+		"rimraf": "^4.4.1",
+		"sass": "^1.80.1",
+		"semantic-release": "^19.0.5",
+		"start-server-and-test": "^1.15.4",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.24.1"
+	},
+	"author": "Jonas Schneider (https://github.com/jonsch318)",
+	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
