--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "15.2.2",
-    "@next/env": "15.2.2",
-    "@next/mdx": "15.2.2",
+    "@next/bundle-analyzer": "15.2.3",
+    "@next/env": "15.2.3",
+    "@next/mdx": "15.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.2",
+    "@react-three/fiber": "^9.1.0",
     "@shikijs/rehype": "^3.2.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
+    "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -35,11 +37,11 @@
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.21",
-    "lucide-react": "^0.482.0",
+    "lucide-react": "^0.483.0",
     "mermaid": "^11.5.0",
     "motion": "^12.5.0",
     "natsort": "^2.0.3",
-    "next": "15.2.2",
+    "next": "15.2.3",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.6",
@@ -57,6 +59,7 @@
     "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "webpack": "^5.98.0"
@@ -69,7 +72,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
-    "@types/react": "19.0.10",
+    "@types/react": "19.0.12",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
