--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,8 @@
 name: release
-
 on:
   push:
     branches:
       - master
-
 jobs:
   build-push:
     runs-on: ubuntu-latest
@@ -28,18 +26,19 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: "${{ secrets.REGISTRY_USERNAME }}"
+          password: "${{ secrets.REGISTRY_PASSWORD }}"
       - name: Build & Push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request'}}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels}}
+          push: "${{ github.event_name != 'pull_request'}}"
+          tags: "${{ steps.meta.outputs.tags }}"
+          labels: "${{ steps.meta.outputs.labels}}"
           file: "docker/production/Dockerfile"
-      - name: Deployment Hook
-        uses: distributhor/workflow-webhook@v3
-        with:
-          webhook_url: ${{secrets.WEBHOOK_URL}}
-          webhook_secret: ${{secrets.WEBHOOK_SECRET}}
+          platforms: linux/amd64,linux/arm64
+    # - name: Deployment Hook
+    #   uses: distributhor/workflow-webhook@v3
+    #   with:
+    #     webhook_url: "${{secrets.WEBHOOK_URL}}"
+    #     webhook_secret: "${{secrets.WEBHOOK_SECRET}}"
