--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:23-alpine AS base
+FROM --platform=$BUILDPLATFORM node:23-alpine AS base
 
 # 1. Install dependencies only when needed
 FROM base AS deps
@@ -8,7 +8,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+COPY package.json pnpm-lock.yaml* ./
 RUN \
 	corepack enable pnpm && pnpm install sharp && pnpm i 
 
@@ -31,11 +31,8 @@ RUN adduser -S nextjs -u 1001
 
 COPY --from=builder /app/public ./public
 
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
 
 USER nextjs
 
