--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-image-export-optimizer",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "lint": "next lint",
@@ -17,9 +17,9 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "15.2.3",
-    "@next/env": "15.2.3",
-    "@next/mdx": "15.2.3",
+    "@next/bundle-analyzer": "15.2.4",
+    "@next/env": "15.2.4",
+    "@next/mdx": "15.2.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
@@ -37,11 +37,12 @@
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.21",
-    "lucide-react": "^0.483.0",
+    "lucide-react": "^0.485.0",
     "mermaid": "^11.6.0",
     "motion": "^12.6.2",
     "natsort": "^2.0.3",
-    "next": "15.2.3",
+    "next": "15.2.4",
+    "next-image-export-optimizer": "^1.18.0",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.6",
@@ -71,7 +72,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.13.14",
     "@types/react": "19.0.12",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^10.0.0",
