--- a/package.json
+++ b/package.json
@@ -1,99 +1,105 @@
 {
-  "type": "module",
-  "name": "htwr-aachen",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next-image-export-optimizer",
-    "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "lint": "next lint",
-    "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/mdx": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "15.2.4",
-    "@next/env": "15.2.4",
-    "@next/mdx": "15.2.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-visually-hidden": "^1.1.2",
-    "@react-three/fiber": "^9.1.1",
-    "@shikijs/rehype": "^3.2.1",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/mdx": "^2.0.13",
-    "@types/three": "^0.175.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "feed": "^4.2.2",
-    "gray-matter": "^4.0.3",
-    "katex": "^0.16.21",
-    "lucide-react": "^0.487.0",
-    "mermaid": "^11.6.0",
-    "motion": "^12.6.3",
-    "natsort": "^2.0.3",
-    "next": "15.2.4",
-    "next-image-export-optimizer": "^1.18.0",
-    "next-mdx-remote": "^5.0.0",
-    "next-seo": "^6.6.0",
-    "next-themes": "^0.4.6",
-    "prop-types": "^15.8.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-responsive-carousel": "^3.2.23",
-    "rehype-katex": "^7.0.1",
-    "rehype-react": "^8.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-hint": "^1.0.10",
-    "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.2",
-    "sharp": "^0.33.5",
-    "shiki": "^3.2.1",
-    "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.175.0",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.2",
-    "webpack": "^5.98.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@tailwindcss/postcss": "^4.1.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.0",
-    "@types/react": "19.1.0",
-    "@types/remark-hint": "^1.0.6",
-    "@types/uuid": "^10.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "memfs": "^4.17.0",
-    "postcss": "^8.5.3",
-    "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0"
-  },
-  "author": "Jonas Schneider (https://github.com/jonsch318)",
-  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
+	"type": "module",
+	"name": "htwr-aachen",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next-image-export-optimizer",
+		"start": "next start",
+		"build-stats": "cross-env ANALYZE=true npm run build",
+		"lint": "next lint",
+		"format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+		"check-types": "tsc --noEmit --pretty",
+		"test": "jest",
+		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+	},
+	"dependencies": {
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/mdx": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/bundle-analyzer": "15.2.4",
+		"@next/env": "15.2.4",
+		"@next/mdx": "15.2.4",
+		"@radix-ui/react-collapsible": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-navigation-menu": "^1.2.6",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-visually-hidden": "^1.1.3",
+		"@react-three/fiber": "^9.1.2",
+		"@shikijs/rehype": "^3.2.1",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/mdx": "^2.0.13",
+		"@types/three": "^0.175.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
+		"feed": "^4.2.2",
+		"gray-matter": "^4.0.3",
+		"katex": "^0.16.21",
+		"lucide-react": "^0.487.0",
+		"mermaid": "^11.6.0",
+		"motion": "^12.6.3",
+		"natsort": "^2.0.3",
+		"next": "15.2.4",
+		"next-image-export-optimizer": "^1.18.0",
+		"next-mdx-remote": "^5.0.0",
+		"next-seo": "^6.6.0",
+		"next-themes": "^0.4.6",
+		"prop-types": "^15.8.1",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-responsive-carousel": "^3.2.23",
+		"rehype-katex": "^7.0.1",
+		"rehype-react": "^8.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-hint": "^1.0.10",
+		"remark-math": "^6.0.0",
+		"remark-rehype": "^11.1.2",
+		"sharp": "^0.34.1",
+		"shiki": "^3.2.1",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.175.0",
+		"uuid": "^11.1.0",
+		"vaul": "^1.1.2",
+		"webpack": "^5.99.3"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.24.0",
+		"@opennextjs/aws": "^3.5.5",
+		"@opennextjs/cloudflare": "1.0.0-beta.1",
+		"@tailwindcss/postcss": "^4.1.3",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.14.0",
+		"@types/react": "19.1.0",
+		"@types/remark-hint": "^1.0.6",
+		"@types/uuid": "^10.0.0",
+		"cross-env": "^7.0.3",
+		"eslint": "^9.24.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250405",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"globals": "^16.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"memfs": "^4.17.0",
+		"postcss": "^8.5.3",
+		"prettier": "3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"rimraf": "^6.0.1",
+		"tailwindcss": "^4.1.3",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.29.1",
+		"wrangler": "^4.9.0"
+	},
+	"author": "Jonas Schneider (https://github.com/jonsch318)",
+	"packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
