--- a/package.json
+++ b/package.json
@@ -13,41 +13,46 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "15.3.1",
-    "@next/env": "15.3.1",
-    "@next/mdx": "15.3.1",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-visually-hidden": "^1.1.3",
+    "@next/bundle-analyzer": "15.3.2",
+    "@next/env": "15.3.2",
+    "@next/mdx": "15.3.2",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-collapsible": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@radix-ui/react-visually-hidden": "^1.2.2",
     "@react-three/fiber": "^9.1.2",
-    "@shikijs/rehype": "^3.2.2",
+    "@shikijs/rehype": "^3.4.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
-    "@types/three": "^0.175.0",
+    "@types/three": "^0.176.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "feed": "^4.2.2",
+    "feed": "^5.0.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.22",
-    "lucide-react": "^0.488.0",
+    "lucide-react": "^0.508.0",
     "mermaid": "^11.6.0",
-    "motion": "^12.7.4",
+    "motion": "^12.10.4",
     "natsort": "^2.0.3",
-    "next": "15.3.1",
-    "next-image-export-optimizer": "^1.18.0",
+    "next": "15.3.2",
+    "next-image-export-optimizer": "^1.19.0",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-responsive-carousel": "^3.2.23",
     "rehype-katex": "^7.0.1",
     "rehype-react": "^8.0.0",
@@ -56,44 +61,46 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "sharp": "^0.34.1",
-    "shiki": "^3.2.2",
+    "shiki": "^3.4.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.175.0",
+    "three": "^0.176.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "webpack": "^5.99.5"
+    "webpack": "^5.99.8",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@next/eslint-plugin-next": "^15.3.1",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@eslint/js": "^9.26.0",
+    "@next/eslint-plugin-next": "^15.3.2",
+    "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.1",
-    "@types/react": "19.1.2",
+    "@types/node": "^22.15.17",
+    "@types/react": "19.1.3",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "eslint-plugin-react-compiler": "19.1.0-rc.1",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.0.0",
+    "globals": "^16.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "memfs": "^4.17.0",
+    "memfs": "^4.17.1",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1"
+    "typescript-eslint": "^8.32.0"
   },
   "author": "Jonas Schneider (https://github.com/jonsch318)",
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
