--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@radix-ui/react-visually-hidden": "^1.2.2",
     "@react-three/fiber": "^9.1.2",
-    "@shikijs/rehype": "^3.4.0",
+    "@shikijs/rehype": "^3.4.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "@types/three": "^0.176.0",
@@ -37,12 +37,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "feed": "^5.0.0",
+    "feed": "^5.0.1",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.22",
-    "lucide-react": "^0.508.0",
+    "lucide-react": "^0.510.0",
     "mermaid": "^11.6.0",
-    "motion": "^12.10.4",
+    "motion": "^12.11.3",
     "natsort": "^2.0.3",
     "next": "15.3.2",
     "next-image-export-optimizer": "^1.19.0",
@@ -61,9 +61,9 @@
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.2",
     "sharp": "^0.34.1",
-    "shiki": "^3.4.0",
+    "shiki": "^3.4.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "uuid": "^11.1.0",
@@ -74,18 +74,18 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@next/eslint-plugin-next": "^15.3.2",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.17",
-    "@types/react": "19.1.3",
+    "@types/node": "^22.15.18",
+    "@types/react": "19.1.4",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.3",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.1",
@@ -98,9 +98,10 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.32.1"
   },
   "author": "Jonas Schneider (https://github.com/jonsch318)",
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
